# clifford-kernels

./: .gitignore  .pre-commit-config.yaml  README.md  dprint.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
cayley/: __init__.py  kernel.py  sparse.py
examples/: advanced.py  simple.py
mlx/: README.md  pyproject.toml
mlx/cayley/: __init__.py  metal.py  pure.py  sig.py  sparse_gp.metal
mlx/examples/: metal_kernel.py  pure_mlx.py
mlx/tests/: test_kernel.py
pytorch/: README.md  pyproject.toml
pytorch/cayley/: __init__.py  kernel.py  sig.py  sparse.py
pytorch/examples/: advanced.py  cuda_oxide.py  kernels_hub.py  simple.py  torch_compile.py
pytorch/tests/: test_examples.py  test_kernel.py
rust/: Cargo.toml  README.md  rust-toolchain.toml
rust/src/: lib.rs  main.rs  reference.rs  sig.rs
rust/tests/: sig_parity.rs
tests/: test_kernel.py
tiny_cayley/: __init__.py
