[project]
name = "tiny-cayley"
version = "0.1.0"
description = "Minimal Triton kernel for sparse Cayley table contraction"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "torch>=2.4",
  "triton; platform_system == 'Linux'",
  "jaxtyping>=0.2.25",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tiny_cayley"]

[tool.pytest.ini_options]
testpaths = ["tests"]
