[project]
name = "cayley-mlx"
version = "0.1.0"
description = "Sparse Cayley table contraction in MLX (pure + Metal kernel)"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "mlx>=0.31",
]

[dependency-groups]
dev = [
  "pytest>=9.1.1",
  "ruff>=0.15.19",
  "numpy>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cayley"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E741"]

[tool.ruff.lint.per-file-ignores]
"examples/*.py" = ["E501"]
"tests/*.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
