[project]
name = "cayley"
version = "0.1.0"
description = "Minimal Triton kernel for sparse Cayley table contraction"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "torch>=2.4",
  "triton; platform_system == 'Linux'",
  "jaxtyping>=0.2.25",
]

[dependency-groups]
dev = [
  "pytest>=9.1.0",
  "ruff>=0.15.17",
  "pre-commit>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cayley"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E741"]

[tool.ruff.lint.per-file-ignores]
"examples/*.py" = ["E501"]
"tests/*.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
