[package]
name = "cayley-oxide"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Sparse Cayley table contraction kernel in Rust via cuda-oxide"

[workspace]

[features]
default = []
gpu = ["dep:cuda-device", "dep:cuda-host", "dep:cuda-core"]

[dependencies]
cuda-device = { git = "https://github.com/NVlabs/cuda-oxide.git", rev = "76a1d8840e5360207943805d036d8e299bda7728", optional = true }
cuda-host   = { git = "https://github.com/NVlabs/cuda-oxide.git", rev = "76a1d8840e5360207943805d036d8e299bda7728", optional = true }
cuda-core   = { git = "https://github.com/NVlabs/cuda-oxide.git", rev = "76a1d8840e5360207943805d036d8e299bda7728", optional = true }

[[bin]]
name = "cayley-oxide"
path = "src/main.rs"
required-features = ["gpu"]
